# open_speclib_workflow

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml  requirements.txt  snakefile.smk
build_tools/docker_build_bibliospec/: DOCKERFILE  build.bash
reference_files/: comet.params.new  run.yml
test/: DOCKERFILE  README.md  convert_data.bash  dockerized_run.bash  download_truncated.bash  pyproject.toml  run.yml
